--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>React Mutiny</title>
 </head>
 <body>
-  <div id="root" role="application"></div>
+  <div style="width: 600px; margin: 64px auto">
+    <div id="root" role="application"></div>
+  </div>
   <script src="src/entrypoint.js"></script>
 </body>
 </html>
